--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shader</title>
+    <title>Sun Shader</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
